--- a/WebContent/Browse.jspx
+++ b/WebContent/Browse.jspx
@@ -96,7 +96,9 @@ body {
 						</div>
 					</nav>
 				</td>
-				<td><label for="bookID" style="margin-right: 100px"
+				<td>
+				
+				<h1>${addedToCart }</h1><label for="bookID" style="margin-right: 100px"
 					class="w3-medium w3-text-red"><br>
 					<font size="4" color="#e8e0d9"><b>Display Books: </b></font></br></label></td>
 				<td align="right">${results}</td>
