--- a/WebContent/Browse.jspx
+++ b/WebContent/Browse.jspx
@@ -53,18 +53,18 @@ body {
 </head>
 <body>
 	Browse
-	<form name='browseForm' action="Start" method="POST"
-		onsubmit="return validate();">
+
 		<table>
 
 			<tr>
 				<td width="300px">
 					<div class="topnav" style="margin-left: 340px; margin-right: 100px">
-						<a href="Start?currPage=categories">All Books</a>
-						<a href="Start?currPage=categories&amp;category=EECS1">EECS -
+						<a href="Start?currPage=categories">All Books</a> <a
+							href="Start?currPage=categories&amp;category=EECS1">EECS -
 							First Year</a> <a href="Start?currPage=categories&amp;category=EECS2">EECS
-							- Second Year</a> <a href="Start?currPage=categories&amp;category=EECS3">EECS
-							- Third Year</a> <a href="Start?currPage=categories&amp;category=EECS4">EECS
+							- Second Year</a> <a
+							href="Start?currPage=categories&amp;category=EECS3">EECS -
+							Third Year</a> <a href="Start?currPage=categories&amp;category=EECS4">EECS
 							- Fourth Year</a>
 					</div>
 
@@ -97,15 +97,45 @@ body {
 					</nav>
 				</td>
 				<td>
-				
-				<h1>${addedToCart }</h1><label for="bookID" style="margin-right: 100px"
-					class="w3-medium w3-text-red"><br>
-					<font size="4" color="#e8e0d9"><b>Display Books: </b></font></br></label></td>
-				<td align="right">${results}</td>
-				<td></td>
+					<!-- Header -->
+					<div class="w3-container" style="margin-top: 80px" id="showcase">
+						<h1 class="w3-jumbo">
+							<b>Swag EECS Bookstore</b>
+						</h1>
+					</div>
+					<form name='browseForm' action="Start?currPage=search"
+						method="POST" onsubmit="Start?currPage=search">
+						<table style="width: 100%">
+							<tr align="right">
+								<td><input type='text' name='searchField' id="searchField"
+									placeholder='Browse Books'></input><input type="submit"
+									name="Search" value="Search"></input></td>
+							</tr>
+							<tr>
+								<td><p id='resultDisplay'></p></td>
+							</tr>
+						</table>
+					</form>
+					<table>
+						<tr>
+							<td>
+								<h1>${addedToCart }</h1> <label for="bookID"
+								style="margin-right: 100px" class="w3-medium w3-text-red" /><br />
+							</td>
+						</tr>
+						<tr>
+							<td>	<font size="4" color="#e8e0d9"><b>Display Books: </b></font>
+						
+						
+							</td>
+						</tr>
+						<tr>
+							<td align="right">${results}</td>
+						</tr>
+					</table>
+				</td>
 			</tr>
 		</table>
-	</form>
 </body>
 	</html>
 </jsp:root>
