--- a/WebContent/LoginPage.jspx
+++ b/WebContent/LoginPage.jspx
@@ -58,11 +58,11 @@
 						<tr align="right">
 							<td><input type='text' style="margin-right: 10px"
 								name='browse' placeholder='Browse Books'></input>
-								<button action='Submit' name='createAccount'
+								<input type="submit" action='Submit' name='createAccount'
 									label='createAccount' style="margin-top: 30px"
 									class="w3-medium w3-text-black,w3-button w3-khaki w3-round-xlarge ">
-									<font color="#701e6e"></font> Search
-								</button></td>
+									
+								</input></td>
 						</tr>
 
 						<tr>
