--- a/WebContent/Admin.jspx
+++ b/WebContent/Admin.jspx
@@ -26,24 +26,24 @@
 </head>
 <body background="res/Images/Books.jpg">
 	<form action='' method="GET">
-		<nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding"
-			style="z-index: 3; width: 300px; font-weight: bold;" id="mySidebar">
-			<br /> <a href="javascript:void(0)" onclick="w3_close()"
-				class="w3-button w3-hide-large w3-display-topleft"
-				style="width: 100%; font-size: 22px">Close Menu</a>
-			<div class="w3-container">
-				<h3 class="w3-padding-64"></h3>
-			</div>
-					<div class="w3-bar-block">
-							<a href="Start?currPage=home" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
-							<a href="Start?currPage=categories" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Categories</a> 
-							<a href="Start?currPage=cart" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cart</a> 
-							<a href="Start?currPage=team" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Our Team</a> 
-							<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Account Management</a> 
-							<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Membership</a> 
-							<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
-					</div>
-		</nav>
+		<!-- 		<nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" -->
+		<!-- 			style="z-index: 3; width: 300px; font-weight: bold;" id="mySidebar"> -->
+		<!-- 			<br /> <a href="javascript:void(0)" onclick="w3_close()" -->
+		<!-- 				class="w3-button w3-hide-large w3-display-topleft" -->
+		<!-- 				style="width: 100%; font-size: 22px">Close Menu</a> -->
+		<!-- 			<div class="w3-container"> -->
+		<!-- 				<h3 class="w3-padding-64"></h3> -->
+		<!-- 			</div> -->
+		<!-- 					<div class="w3-bar-block"> -->
+		<!-- 							<a href="Start?currPage=home" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a>  -->
+		<!-- 							<a href="Start?currPage=categories" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Categories</a>  -->
+		<!-- 							<a href="Start?currPage=cart" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cart</a>  -->
+		<!-- 							<a href="Start?currPage=team" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Our Team</a>  -->
+		<!-- 							<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Account Management</a>  -->
+		<!-- 							<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Membership</a>  -->
+		<!-- 							<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a> -->
+		<!-- 					</div> -->
+		<!-- 		</nav> -->
 		<table>
 
 			<div class="w3-main" style="margin-left: 340px; margin-right: 40px">
@@ -94,6 +94,33 @@
 					</div>
 				</td>
 			</tr>
+			<script>
+				// Get the modal
+				var modal = document.getElementById('jan');
+
+				// Get the button that opens the modal
+				var btn = document.getElementById('janBtn');
+
+				// Get the span element that closes the modal
+				var span = document.getElementsByClassName("close")[0];
+
+				// When the user clicks the button, open the modal 
+				btn.onclick = function() {
+					modal.style.display = "block";
+				}
+
+				// When the user clicks on span (x), close the modal
+				span.onclick = function() {
+					modal.style.display = "none";
+				}
+
+				// When the user clicks anywhere outside of the modal, close it
+				window.onclick = function(event) {
+					if (event.target == modal) {
+						modal.style.display = "none";
+					}
+				}
+			</script>
 
 			<tr>
 				<td>
@@ -122,6 +149,7 @@
 					</div>
 				</td>
 			</tr>
+
 
 			<tr>
 				<td>
@@ -249,42 +277,37 @@
 				</td>
 			</tr>
 
-		</table>
+			<script>
+				// Get the modal
+				var modal = document.getElementById('jan');
 
+				// Get the button that opens the modal
+				var btn = document.getElementById('janBtn');
 
-		<script>
-			// Get the modal
-			var modal = document.getElementById('jan' || 'feb' || 'mar'
-					|| 'apr' || 'may' || 'jun' || 'jul' || 'aug' || 'sep'
-					|| 'oct' || 'nov' || 'dec');
+				// Get the span element that closes the modal
+				var span = document.getElementsByClassName("close")[0];
 
-			// Get the button that opens the modal
-			var btn = document.getElementById('janBtn' || 'febBtn' || 'marBtn'
-					|| 'aprBtn' || 'mayBtn' || 'junBtn' || 'julBtn' || 'augBtn'
-					|| 'sepBtn' || 'octBtn' || 'novBtn' || 'decBtn');
+				// When the user clicks the button, open the modal 
+				btn.onclick = function() {
+					modal.style.display = "block";
+				}
 
-			// Get the span element that closes the modal
-			var span = document.getElementsByClassName("close")[0];
-
-			// When the user clicks the button, open the modal 
-			btn.onclick = function() {
-				modal.style.display = "block";
-			}
-
-			// When the user clicks on span (x), close the modal
-			span.onclick = function() {
-				modal.style.display = "none";
-			}
-
-			// When the user clicks anywhere outside of the modal, close it
-			window.onclick = function(event) {
-				if (event.target == modal) {
+				// When the user clicks on span (x), close the modal
+				span.onclick = function() {
 					modal.style.display = "none";
 				}
-			}
-		</script>
 
+				// When the user clicks anywhere outside of the modal, close it
+				window.onclick = function(event) {
+					if (event.target == modal) {
+						modal.style.display = "none";
+					}
+				}
+			</script>
 		</table>
+
+
+
 	</form>
 </body>
 
@@ -307,7 +330,6 @@
 
 	</table>
 </footer>
-
 
 	</html>
 </jsp:root>
