Admin Page- added modal

--- a/WebContent/Admin.jspx
+++ b/WebContent/Admin.jspx
@@ -22,7 +22,43 @@
 	;
 </script>
 <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
+<style>
+.modal {
+	display: none; /* Hidden by default */
+	position: fixed; /* Stay in place */
+	z-index: 1; /* Sit on top */
+	left: 0;
+	top: 0;
+	width: 100%; /* Full width */
+	height: 100%; /* Full height */
+	overflow: auto; /* Enable scroll if needed */
+	background-color: rgb(0, 0, 0); /* Fallback color */
+	background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
 
+/* Modal Content/Box */
+.modal-content {
+	background-color: #fefefe;
+	margin: 15% auto; /* 15% from the top and centered */
+	padding: 20px;
+	border: 1px solid #888;
+	width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+	color: #aaa;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+}
+
+.close:hover, .close:focus {
+	color: black;
+	text-decoration: none;
+	cursor: pointer;
+}
+</style>
 </head>
 <body background="res/Images/Books.jpg">
 	<form action='' method="GET">
@@ -135,6 +171,33 @@
 					</div>
 				</td>
 			</tr>
+			<script>
+				// Get the modal
+				var modal = document.getElementById('feb');
+
+				// Get the button that opens the modal
+				var btn = document.getElementById('febBtn');
+
+				// Get the span element that closes the modal
+				var span = document.getElementsByClassName("close")[0];
+
+				// When the user clicks the button, open the modal 
+				btn.onclick = function() {
+					modal.style.display = "block";
+				}
+
+				// When the user clicks on span (x), close the modal
+				span.onclick = function() {
+					modal.style.display = "none";
+				}
+
+				// When the user clicks anywhere outside of the modal, close it
+				window.onclick = function(event) {
+					if (event.target == modal) {
+						modal.style.display = "none";
+					}
+				}
+			</script>
 
 			<tr>
 				<td>
@@ -149,7 +212,33 @@
 					</div>
 				</td>
 			</tr>
+			<script>
+				// Get the modal
+				var modal = document.getElementById('mar');
 
+				// Get the button that opens the modal
+				var btn = document.getElementById('marBtn');
+
+				// Get the span element that closes the modal
+				var span = document.getElementsByClassName("close")[0];
+
+				// When the user clicks the button, open the modal 
+				btn.onclick = function() {
+					modal.style.display = "block";
+				}
+
+				// When the user clicks on span (x), close the modal
+				span.onclick = function() {
+					modal.style.display = "none";
+				}
+
+				// When the user clicks anywhere outside of the modal, close it
+				window.onclick = function(event) {
+					if (event.target == modal) {
+						modal.style.display = "none";
+					}
+				}
+			</script>
 
 			<tr>
 				<td>
@@ -164,6 +253,33 @@
 					</div>
 				</td>
 			</tr>
+			<script>
+				// Get the modal
+				var modal = document.getElementById('apr');
+
+				// Get the button that opens the modal
+				var btn = document.getElementById('aprBtn');
+
+				// Get the span element that closes the modal
+				var span = document.getElementsByClassName("close")[0];
+
+				// When the user clicks the button, open the modal 
+				btn.onclick = function() {
+					modal.style.display = "block";
+				}
+
+				// When the user clicks on span (x), close the modal
+				span.onclick = function() {
+					modal.style.display = "none";
+				}
+
+				// When the user clicks anywhere outside of the modal, close it
+				window.onclick = function(event) {
+					if (event.target == modal) {
+						modal.style.display = "none";
+					}
+				}
+			</script>
 
 			<tr>
 				<td>
@@ -178,6 +294,33 @@
 					</div>
 				</td>
 			</tr>
+			<script>
+				// Get the modal
+				var modal = document.getElementById('may');
+
+				// Get the button that opens the modal
+				var btn = document.getElementById('mayBtn');
+
+				// Get the span element that closes the modal
+				var span = document.getElementsByClassName("close")[0];
+
+				// When the user clicks the button, open the modal 
+				btn.onclick = function() {
+					modal.style.display = "block";
+				}
+
+				// When the user clicks on span (x), close the modal
+				span.onclick = function() {
+					modal.style.display = "none";
+				}
+
+				// When the user clicks anywhere outside of the modal, close it
+				window.onclick = function(event) {
+					if (event.target == modal) {
+						modal.style.display = "none";
+					}
+				}
+			</script>
 
 			<tr>
 				<td>
@@ -192,6 +335,33 @@
 					</div>
 				</td>
 			</tr>
+			<script>
+				// Get the modal
+				var modal = document.getElementById('jun');
+
+				// Get the button that opens the modal
+				var btn = document.getElementById('junBtn');
+
+				// Get the span element that closes the modal
+				var span = document.getElementsByClassName("close")[0];
+
+				// When the user clicks the button, open the modal 
+				btn.onclick = function() {
+					modal.style.display = "block";
+				}
+
+				// When the user clicks on span (x), close the modal
+				span.onclick = function() {
+					modal.style.display = "none";
+				}
+
+				// When the user clicks anywhere outside of the modal, close it
+				window.onclick = function(event) {
+					if (event.target == modal) {
+						modal.style.display = "none";
+					}
+				}
+			</script>
 
 			<tr>
 				<td>
@@ -206,6 +376,33 @@
 					</div>
 				</td>
 			</tr>
+			<script>
+				// Get the modal
+				var modal = document.getElementById('jul');
+
+				// Get the button that opens the modal
+				var btn = document.getElementById('julBtn');
+
+				// Get the span element that closes the modal
+				var span = document.getElementsByClassName("close")[0];
+
+				// When the user clicks the button, open the modal 
+				btn.onclick = function() {
+					modal.style.display = "block";
+				}
+
+				// When the user clicks on span (x), close the modal
+				span.onclick = function() {
+					modal.style.display = "none";
+				}
+
+				// When the user clicks anywhere outside of the modal, close it
+				window.onclick = function(event) {
+					if (event.target == modal) {
+						modal.style.display = "none";
+					}
+				}
+			</script>
 
 			<tr>
 				<td>
@@ -220,6 +417,33 @@
 					</div>
 				</td>
 			</tr>
+			<script>
+				// Get the modal
+				var modal = document.getElementById('aug');
+
+				// Get the button that opens the modal
+				var btn = document.getElementById('augBtn');
+
+				// Get the span element that closes the modal
+				var span = document.getElementsByClassName("close")[0];
+
+				// When the user clicks the button, open the modal 
+				btn.onclick = function() {
+					modal.style.display = "block";
+				}
+
+				// When the user clicks on span (x), close the modal
+				span.onclick = function() {
+					modal.style.display = "none";
+				}
+
+				// When the user clicks anywhere outside of the modal, close it
+				window.onclick = function(event) {
+					if (event.target == modal) {
+						modal.style.display = "none";
+					}
+				}
+			</script>
 
 			<tr>
 				<td>
@@ -234,6 +458,33 @@
 					</div>
 				</td>
 			</tr>
+			<script>
+				// Get the modal
+				var modal = document.getElementById('sep');
+
+				// Get the button that opens the modal
+				var btn = document.getElementById('sepBtn');
+
+				// Get the span element that closes the modal
+				var span = document.getElementsByClassName("close")[0];
+
+				// When the user clicks the button, open the modal 
+				btn.onclick = function() {
+					modal.style.display = "block";
+				}
+
+				// When the user clicks on span (x), close the modal
+				span.onclick = function() {
+					modal.style.display = "none";
+				}
+
+				// When the user clicks anywhere outside of the modal, close it
+				window.onclick = function(event) {
+					if (event.target == modal) {
+						modal.style.display = "none";
+					}
+				}
+			</script>
 
 			<tr>
 				<td>
@@ -248,6 +499,33 @@
 					</div>
 				</td>
 			</tr>
+			<script>
+				// Get the modal
+				var modal = document.getElementById('oct');
+
+				// Get the button that opens the modal
+				var btn = document.getElementById('octBtn');
+
+				// Get the span element that closes the modal
+				var span = document.getElementsByClassName("close")[0];
+
+				// When the user clicks the button, open the modal 
+				btn.onclick = function() {
+					modal.style.display = "block";
+				}
+
+				// When the user clicks on span (x), close the modal
+				span.onclick = function() {
+					modal.style.display = "none";
+				}
+
+				// When the user clicks anywhere outside of the modal, close it
+				window.onclick = function(event) {
+					if (event.target == modal) {
+						modal.style.display = "none";
+					}
+				}
+			</script>
 
 			<tr>
 				<td>
@@ -262,7 +540,33 @@
 					</div>
 				</td>
 			</tr>
+			<script>
+				// Get the modal
+				var modal = document.getElementById('nov');
 
+				// Get the button that opens the modal
+				var btn = document.getElementById('novBtn');
+
+				// Get the span element that closes the modal
+				var span = document.getElementsByClassName("close")[0];
+
+				// When the user clicks the button, open the modal 
+				btn.onclick = function() {
+					modal.style.display = "block";
+				}
+
+				// When the user clicks on span (x), close the modal
+				span.onclick = function() {
+					modal.style.display = "none";
+				}
+
+				// When the user clicks anywhere outside of the modal, close it
+				window.onclick = function(event) {
+					if (event.target == modal) {
+						modal.style.display = "none";
+					}
+				}
+			</script>
 			<tr>
 				<td>
 					<div>
@@ -279,10 +583,10 @@
 
 			<script>
 				// Get the modal
-				var modal = document.getElementById('jan');
+				var modal = document.getElementById('dec');
 
 				// Get the button that opens the modal
-				var btn = document.getElementById('janBtn');
+				var btn = document.getElementById('decBtn');
 
 				// Get the span element that closes the modal
 				var span = document.getElementsByClassName("close")[0];
